--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -34,6 +34,12 @@
                         android:text="Item Name"
                         android:textSize="20sp" />
 
+                    <TextView
+                        android:id="@+id/txt_item_name_error"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="*Required"/>
+
                     <EditText
                         android:id="@+id/txt_item_name"
                         android:layout_width="match_parent"
@@ -70,6 +76,12 @@
                         android:layout_height="wrap_content"
                         android:text="Purchase Price"
                         android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/txt_purchase_price_error"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="*Required"/>
 
                     <EditText
                         android:id="@+id/txt_purchase_price"
