--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -28,17 +28,26 @@
                     android:layout_weight="1"
                     android:orientation="vertical" >
 
-                    <TextView
-                        android:layout_width="match_parent"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Item Name"
-                        android:textSize="20sp" />
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/txt_item_name_error"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="*Required"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Item Name"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:id="@+id/txt_item_name_error"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="*Required"
+                            android:layout_marginLeft="5dp"
+                            android:textSize="10sp"/>
+
+                    </LinearLayout>
 
                     <EditText
                         android:id="@+id/txt_item_name"
@@ -50,11 +59,22 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Item Type"
+                        android:text="Type"
                         android:textSize="20sp" />
 
                     <Spinner
                         android:id="@+id/spinner_item_type"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Category"
+                        android:textSize="20sp" />
+
+                    <Spinner
+                        android:id="@+id/spinner_item_subtype"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
@@ -71,17 +91,26 @@
                         android:ems="10"
                         android:hint="MM/DD/YYYY"/>
 
-                    <TextView
-                        android:layout_width="match_parent"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Purchase Price"
-                        android:textSize="20sp" />
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/txt_purchase_price_error"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="*Required"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Purchase Price"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:id="@+id/txt_purchase_price_error"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="*Required"
+                            android:textSize="10sp"
+                            android:layout_marginLeft="5dp"/>
+
+                    </LinearLayout>
 
                     <EditText
                         android:id="@+id/txt_purchase_price"
@@ -130,12 +159,18 @@
             android:layout_height="fill_parent"
             android:orientation="vertical">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Notes"
+                android:textSize="20sp" />
+
             <EditText
                 android:id="@+id/txt_notes"
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
                 android:gravity="top"
-                android:hint="Notes"
+                android:hint="Enter Notes"
                 android:inputType="textMultiLine" />
 
         </LinearLayout>
