--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -56,22 +56,52 @@
                         android:ems="10"
                         android:hint="Name"/>
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Type"
-                        android:textSize="20sp" />
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Type"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:id="@+id/txt_type_error"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="*Required"
+                            android:textSize="10sp"
+                            android:layout_marginLeft="5dp"/>
+
+                    </LinearLayout>
 
                     <Spinner
                         android:id="@+id/spinner_item_type"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Category"
-                        android:textSize="20sp" />
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Category"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:id="@+id/txt_subtype_error"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="*Required"
+                            android:textSize="10sp"
+                            android:layout_marginLeft="5dp"/>
+
+                    </LinearLayout>
 
                     <Spinner
                         android:id="@+id/spinner_item_subtype"
@@ -137,24 +167,16 @@
                             android:id="@+id/image_item_featured"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
                             android:layout_weight="1"
-                            app:srcCompat="@mipmap/logo" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="100dp"
-                        android:orientation="vertical">
+                            app:srcCompat="@mipmap/ctcovers" />
 
                         <Button
-                            android:id="@+id/btn_save_item"
+                            android:id="@+id/btn_new_image"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="right"
-                            android:layout_marginRight="10dp"
-                            android:text="Save"/>
+                            android:layout_gravity="center_horizontal"
+                            android:text="New Image"/>
 
                     </LinearLayout>
 
