--- a/app/src/main/res/menu/menu_item_details.xml
+++ b/app/src/main/res/menu/menu_item_details.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/menu_save_item"
+        android:icon="@drawable/ic_save"
+        android:title="Save"
+        app:showAsAction="ifRoom|withText" />
+
     <item
         android:id="@+id/menu_delete_item"
         android:title="Delete Item" />
