--- a/app/src/main/res/layout/list_collection_item.xml
+++ b/app/src/main/res/layout/list_collection_item.xml
@@ -23,6 +23,8 @@
                     android:id="@+id/item_featured_image"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:maxWidth="100dp"
+                    android:adjustViewBounds="true"
                     app:srcCompat="@mipmap/crown_logo" />
 
             </LinearLayout>
@@ -30,7 +32,8 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginLeft="10dp">
 
                 <TextView
                     android:id="@+id/item_name"
