--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,18 +14,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="50dp"
             android:gravity="center"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView"
+            <ImageView
+                android:id="@+id/image_item_featured"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="40dp"
-                android:gravity="center"
-                android:text="CT Republic" />
-
+                android:layout_gravity="center_horizontal"
+                app:srcCompat="@mipmap/ctcovers" />
 
             <Button
                 android:id="@+id/btnViewCollection"
