--- a/app/src/main/res/menu/menu_collection_list.xml
+++ b/app/src/main/res/menu/menu_collection_list.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/search_view"
+        android:title="Search"
+        android:icon="@drawable/ic_search"
+        app:actionViewClass="android.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView" />
+    <item
         android:id="@+id/menu_new_item"
         android:icon="@drawable/ic_menu_add"
         android:title="New Item"
